--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-tactile
+
+title: What do we have here? A peak into Maia's public projects
+description: Stay tuned as more become available!
